<resources>
    <string name="app_name">GroceryApp</string>
    <string name="add_new_item">Save</string>
    <string name="add_new_item_title">New item to list</string>
    <string name="add_item_name_hint">Name</string>
    <string name="add_item_amount_hint">Amount</string>
    <string name="btn_add_item_title">Add</string>
    <string name="empty_list">Your list is empty</string>
    <string name="item_deleted">Item deleted</string>
    <string name="empty_title_message">Whooops!</string>
    <string name="empty_message">Your list is empty because you don\'t add any item yet.</string>
    <string name="title_login">Login</string>
    <string name="title_sing_up">Sing up</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="error_something_wrong">Uppss... something it\'s wrong</string>
    <string name="error_invalid_password_format">Check your password: Password must be between 4 and 8 digits long and include at least a numeric digit</string>
    <string name="error_invalid_email_format">Check your email: Email should contain @ and be a valid email</string>
    <string name="error_invalid_email_and_password_format">Check your email and password: Password must be between 4 and 8 digits long and include at least a numeric digit and email should contain @ and be a valid email </string>
    <string name="error_title">Error</string>
    <string name="error_message">Something went wrong!</string>
    <string name="action_done_title">Done</string>
    <string name="error_item_empty">Item can\'t be empty</string>
</resources>
